--- a/Notes/2025-06-22.md
+++ b/Notes/2025-06-22.md
@@ -1,7 +1,7 @@
 # GitHub Pages Setup
 
-- Start with a simple repo + single page.
-- Try generating some diagrams.
-- Try using some Jekyll styles.
-- Try GitHub desktop.
+- [ ] Start with a simple repo + single page.
+- [ ] Try generating some diagrams.
+- [ ] Try using some Jekyll styles.
+- [ ] Try GitHub desktop.
 
