- add a Jekyll config - update Notes/

--- a/Notes/2025-06-23.md
+++ b/Notes/2025-06-23.md
@@ -1,7 +1,7 @@
 # GitHub Pages Setup
 
-- [x] Start with a simple repo + single page.
 - [x] Try generating some diagrams.
-- [ ] Try using a Jekyll style.
+- [ ] Try using some Jekyll styles.
 - [ ] Try GitHub desktop.
+- [ ] Add some `jq` recipies.
 
