- add GitHub copilot screenshots - update notes - remove Jekyll config

--- a/Notes/2025-06-30.md
+++ b/Notes/2025-06-30.md
@@ -2,8 +2,14 @@
 
 - [x] Start with a simple repo + single page.
 - [x] Try generating some diagrams.
-- [x] Try using a Jekyll style.
-  - It seems weird that simply dropping a config file into place (as recommended by GitHub Copilot) would work.
-    - Jekyll appears to require some logic (Ruby) to run, which exists nowhere (yet) in this repo of static docs.
+- [x] Try using a Jekyll style:
+  - It seems weird that simply dropping a config file into place would work, as recommended by GitHub Copilot:
+    - [GPT-4.1 steps 1-3](2025-06-30/GPT-4.1_steps_1_to_3.png)
+    - [GPT-4.1 steps 3-5](2025-06-30/GPT-4.1_steps_3_to_5.png)
+  - Jekyll appears to require some logic (Ruby) to run, which exists nowhere (yet) in this repo of static docs.
+  - But the [rendered pages](https://wolfen.github.io/) _are_ affected by the Jekyll config, as explained here:
+    - [GPT-4.1 explanation steps 1-3](GPT-4.1_question_1_3.png)
+    - [GPT-4.1 explanation step 4 and answer]GPT_4.1_question_4_A.png)
+  - Still, I removed the `_config.yml` file because the rendered pages look awful.
 - [ ] Try GitHub desktop.
 
